<resources>
    <string name="app_name">Game Store</string>
    <string name="gameCategory1"><b>Military</b></string>
    <string name="gameCategory2"><b>MMO</b></string>
    <string name="gameCategory3"><b>Suffering</b></string>
    <string name="about_title"><b>About Game</b></string>
    <string name="developer_title"><b>Developers</b></string>
    <string name="developer"><i>Riot Games</i></string>
    <string name="parahraph">Valorant is a team-based first-person tactical hero shooter set in the near future. Players play as one of a set of Agents, characters based on several countries and cultures around the world.\n\n\n

In the main game mode, players are assigned to either the attacking or defending team with each team having five players on it. Agents have unique abilities, each requiring charges, as well as a unique ultimate ability that requires charging through kills, deaths, orbs, or objectives. Every player starts each round with a "classic" pistol and one or more "signature ability" charges.\n\n\n

Other weapons and ability charges can be purchased using an in-game economic system that awards money based on the outcome of the previous round, any kills the player is responsible for, and any objectives completed. The game has an assortment of weapons including secondary guns like sidearms and primary guns like submachine guns, shotguns, machine guns, assault rifles and sniper rifles.
</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="gameplay_screenshot">Gameplay Screenshot</string>
</resources>